<resources>
    <string name="app_name">NitroOficial</string>
    <string name="inici_sessio">Inicia Sessió</string>
    <string name="usuari">Usuari</string>
    <string name="reestableix_la_teva_contrasenya">Reestableix la teva contrasenya</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="recorda_la_meva_contrasenya">Recorda la meva contrasenya</string>
    <string name="registra_t">Registra\'t</string>
    <string name="nou_usuari">Nou usuari?</string>
    <string name="todo">todo</string>
    <string name="contactanostxt">Contacta\'ns</string>
    <string name="contactemailtxt">nuestroemail@gmail.com</string>
    <string name="contacttlftxt">+34 987 65 43 21</string>
    <string name="siguiente">següent</string>
    <string name="avatar">avatar</string>
    <string name="cerrar_sesion">Tancar Sessió</string>
    <string name="config1">Configuració General</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom_contacte">Nom del Contacte</string>
    <string name="tel_contacte">Telèfon del Contacte</string>
    <string name="telefon">Telèfon</string>
    <string name="mapatxt">Mapa</string>
    <string name="medicamentstxt">Medicaments</string>
    <string name="agendatxt">Agenda</string>
    <string name="resum_semanaltxt">Resum Setmanal</string>
    <string name="todotxt">todotxt</string>
    <string name="notificacionMedicament">Recorda posar una alarma per a la medicació afegida</string>
    <string name="todotxtt">todotxt</string>
    <string name="mapaimg">mapa imatge</string>
    <string name="btn_anyadir_medicament">afegir medicament</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nom_del_medicament">Nom del Medicament</string>
    <string name="nom">Nom</string>
    <string name="foto">Foto:</string>
    <string name="foto_medicament">imatge medicament</string>
    <string name="foto_medicament1">imatge medicament</string>
    <string name="dossis">Dossis:</string>
    <string name="pastilla">Pastilla</string>
    <string name="injecci">Injecció</string>
    <string name="solucio">Solució</string>
    <string name="quantitat">Quantitat:</string>
    <string name="frecuencia">Freqüència:</string>
    <string name="image_medicament4">imatge medicament</string>
    <string name="imatge_medicament2">imatge medicacment</string>
    <string name="contrasenya_inici_sessio">Contrasenya</string>
    <string name="reestableix_la_teva_contrasenya_inici_sessio">Reestableix la teva contrasenya</string>
    <string name="inicia_sessio">Inicia Sessió</string>
    <string name="email_inici_sessio">Email</string>
    <string name="recorda_la_meva_contrasenya_inici_sessio">Recorda la meva contrasenya</string>
    <string name="nou_usuari_inici_sessio">Nou usuari?</string>
    <string name="registra_t_inici_sessio">Registra\'t</string>
    <string name="imtge_contrasenya_inici_sessio">imatge contrasenya</string>
    <string name="confirmar_login_inici_sessio">confirmar login</string>
    <string name="image_email_inici_sessio">imatge email</string>
    <string name="image_splash_inici_sessio">imatge splash</string>
    <string name="nova_contrasenya_recuperar_contrasenya">Nova contrasenya</string>
    <string name="posa_el_teu_email_recuperar_contrasenya">Posa el teu email</string>
    <string name="recupera_la_teva_contrasenya_recuperar_contrasenya">Recupera la teva contrasenya</string>
    <string name="repeteix_la_contrasenya_recuperar_contrasenya">Repeteix la contrasenya</string>
    <string name="image_splash_recuperar_contrasenya">imatge splash</string>
    <string name="recuperar_recuperar_contrasenya">recuperar contrasenya</string>
    <string name="image_email_recuperar_contrasenya">imatge email</string>
    <string name="image_repeteix_contrasenya_recuperar_contrasenya">imatge repeteix contrasenya</string>
    <string name="image_nova_contrasenya_recuperar_contrasenya">imatge nova contrasenya</string>
    <string name="confirmar_Contrasenya_recuperar_contrasenya">confirmar contrasenya</string>
    <string name="cip_registre">CIP</string>
    <string name="contrasenya_registre">Contrasenya</string>
    <string name="dd_mm_aaaa_registre">DD/MM/AAAA</string>
    <string name="correu_electr_nic_registre">Correu electrònic</string>
    <string name="nom_registre">Nom</string>
    <string name="cognoms_registre">Cognoms</string>
    <string name="registra_t_registre">Registra\'t</string>
    <string name="codi_postal_registre">Codi Postal</string>
    <string name="repeteix_contrasenya_registre">Repeteix contrasenya</string>
    <string name="condicions_d_s_registre">Condicions d\'ús</string>
    <string name="accepto_els_termes_de_privacitat_registre">Acepto els termes de privacitat</string>
    <string name="accepto_els_termes_de_privacitat_registre_text">Accepto els termes de privacitat</string>
    <string name="image_splash_registre">imatge splash registre</string>
    <string name="confirmar_regisre_registre">confirmar registre</string>
    <string name="tornar_registre_registre">tornar registre</string>
    <string name="about_about">About...</string>
    <string name="abouttext_about">text</string>
    <string name="retrocedir_about">retrocedir about</string>
    <string name="configuracio_configuracio">Configuració</string>
    <string name="mode_narratiu_configuracio">MODE NARRATIU</string>
    <string name="tamany_text_configuracio">TAMANY TEXT</string>
    <string name="image_normal_configuracio">imatge normal configuració</string>
    <string name="image_trita_configuracio">imatge trita configuració</string>
    <string name="image_deute_configuracio">imatge deute configuració</string>
    <string name="normal_configuracio">Normal</string>
    <string name="deute_configuracio">Deute</string>
    <string name="prota_configuracio">Prota</string>
    <string name="trita_configuracio">Trita</string>
    <string name="idioma_configuracio">IDIOMA</string>
    <string name="image_prota_configuracio">imatge prota configuració</string>
    <string name="retrocedir_configuracio">retrocedir configuració</string>
    <string name="anyadir_contacte_contactos">anyadir contacte</string>
    <string name="contacto_1_items_contactos">Contacto 1</string>
    <string name="numero_items_contactos">999 88 77 66</string>
    <string name="image_contacte_items_contactos">imatge contacte</string>
    <string name="image_editar_items_contactos">imatge editar</string>
    <string name="quantitat_item_medicament">Quantitat</string>
    <string name="freq_encia_item_medicament">Freqüència</string>
    <string name="nom_medicament_item_medicament">Nom Medicament</string>
    <string name="nom_quantitat_item_medicament">Quantitat:</string>
    <string name="nom_freq_encia_item_medicament">Freqüència:</string>
    <string name="info_tipus_pastilla_item_medicament">Tipus Pastilla</string>
    <string name="nom_tipus_item_medicament">Tipus:</string>
    <string name="image_medicament_item_medicament">imatge medicament</string>
    <string name="image_borrar_item_medicament">imatge borrar</string>
    <string name="image_editar_item_medicament">imatge editar</string>
</resources>