<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e4fc"
    android:backgroundTint="#f0e4fc"
    tools:context=".activities.InicioUsuario">


    <ImageView
        android:id="@+id/iv_contrasenya"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/ContraInicio"
        app:layout_constraintTop_toBottomOf="@+id/iv_Email"
        app:srcCompat="@drawable/password"
        android:contentDescription="@string/imtge_contrasenya_inici_sessio" />

    <TextView
        android:id="@+id/tv_IniciaSessio"
        android:layout_width="249dp"
        android:layout_height="74dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/inicia_sessio"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_SplashScreen" />

    <EditText
        android:id="@+id/emailInicio"
        android:layout_width="247dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/email_inici_sessio"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_IniciaSessio"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ContraInicio"
        android:layout_width="249dp"
        android:layout_height="56dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/contrasenya_inici_sessio"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInicio"
        android:autofillHints="" />

    <TextView
        android:id="@+id/linkRestablir"
        android:layout_width="290dp"
        android:layout_height="29dp"
        android:layout_marginEnd="28dp"
        android:text="@string/reestableix_la_teva_contrasenya_inici_sessio"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContraInicio" />

    <CheckBox
        android:id="@+id/chb_RecordaContrasenya"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginEnd="84dp"
        android:buttonTint="#000000"
        android:text="@string/recorda_la_meva_contrasenya_inici_sessio"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkRestablir" />

    <TextView
        android:id="@+id/tv_NouUsuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:text="@string/nou_usuari_inici_sessio"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/RegistratLink"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonConfirmarLogin" />

    <TextView
        android:id="@+id/RegistratLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="152dp"
        android:text="@string/registra_t_inici_sessio"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonConfirmarLogin" />

    <ImageButton
        android:id="@+id/botonConfirmarLogin"
        android:layout_width="84dp"
        android:layout_height="83dp"
        android:layout_marginEnd="56dp"
        android:background="#f0e4fc"
        android:contentDescription="@string/confirmar_login_inici_sessio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_RecordaContrasenya"
        app:srcCompat="@drawable/boton"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/iv_Email"
        android:layout_width="27dp"
        android:layout_height="24dp"

        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@+id/emailInicio"
        app:layout_constraintTop_toBottomOf="@+id/tv_IniciaSessio"
        app:srcCompat="@drawable/persona"
        android:contentDescription="@string/image_email_inici_sessio" />

    <ImageView
        android:id="@+id/iv_SplashScreen"
        android:layout_width="140dp"
        android:layout_height="115dp"
        android:src="@drawable/logoinv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        android:contentDescription="@string/image_splash_inici_sessio" />

</androidx.constraintlayout.widget.ConstraintLayout>

