<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e4fc"
    tools:context=".activities.Registro">

    <ImageView
        android:id="@+id/iv_splash_screen_registre"
        android:layout_width="94dp"
        android:layout_height="84dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/logoinv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_registrat"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/image_splash_registre" />

    <EditText
        android:id="@+id/CipRegistre"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/cip_registre"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#706B6B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CodiPostalRegistre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/CodiPostalRegistre"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/codi_postal_registre"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RepetirContraRegistre"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_registrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:text="@string/registra_t_registre"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/VolverRegistro"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CognomRegistre"
        android:layout_width="205dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/cognoms_registre"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomRegistre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/NomRegistre"
        android:layout_width="205dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/nom_registre"
        android:inputType="textPersonName"

        android:textColor="#000000"
        android:textColorHint="#706B6B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registrat"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EmailRegistre"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/correu_electr_nic_registre"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataRegistre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/DataRegistre"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/dd_mm_aaaa_registre"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CognomRegistre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ContrasenyaRegistre"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/contrasenya_registre"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailRegistre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/RepetirContraRegistre"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/repeteix_contrasenya_registre"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContrasenyaRegistre"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/CondicionsUsRegistre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:buttonTint="#000000"
        android:text="@string/condicions_d_s_registre"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TermePrivacitatRegistre"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/TermePrivacitatRegistre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:buttonTint="#000000"
        android:text="@string/accepto_els_termes_de_privacitat_registre"
        android:textColor="@color/purple_700"
        android:textColorHint="#4A3939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CipRegistre"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/BotonConfirmarRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#f0e4fc"
        android:contentDescription="@string/confirmar_regisre_registre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CondicionsUsRegistre"
        app:srcCompat="@drawable/boton"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/VolverRegistro"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#f0e4fc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/tornar_registre_registre" />

</androidx.constraintlayout.widget.ConstraintLayout>