<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e4fc"
    tools:context=".activities.RecuperarContrasenya">

    <ImageView
        android:id="@+id/iv_splash_screen"
        android:layout_width="140dp"
        android:layout_height="115dp"
        android:contentDescription="@string/image_splash_recuperar_contrasenya"
        android:src="@drawable/logoinv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toEndOf="@+id/VolverRecuperar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/botonConfirmarRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#f0e4fc"
        android:contentDescription="@string/confirmar_Contrasenya_recuperar_contrasenya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="1.0"
        android:clickable="true"
        app:srcCompat="@drawable/boton"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/VolverRecuperar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#f0e4fc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/recuperar_recuperar_contrasenya" />

    <TextView
        android:id="@+id/tv_recuperar_contrasenya"
        android:layout_width="286dp"
        android:layout_height="84dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/black"
        android:text="@string/recupera_la_teva_contrasenya_recuperar_contrasenya"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash_screen" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="238dp"
        android:layout_height="63dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/posa_el_teu_email_recuperar_contrasenya"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/iv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_recuperar_contrasenya" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="#f0e4fc"
        android:contentDescription="@string/image_email_recuperar_contrasenya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recuperar_contrasenya"
        app:srcCompat="@drawable/correoicon" />


</androidx.constraintlayout.widget.ConstraintLayout>